@@ -147,6 +147,8 @@ void
 vips_convolution_operation_init( void )
 {
 	extern int vips_conv_get_type( void ); 
+	extern int vips_morph_get_type( void ); 
 
 	vips_conv_get_type(); 
+	vips_morph_get_type(); 
 }
