@@ -74,6 +74,9 @@ GType vips_operation_flags_get_type (void) G_GNUC_CONST;
 /* enumerations from "../../../libvips/include/vips/convolution.h" */
 GType vips_precision_get_type (void) G_GNUC_CONST;
 #define VIPS_TYPE_PRECISION (vips_precision_get_type())
+/* enumerations from "../../../libvips/include/vips/morphology.h" */
+GType vips_operation_morphology_get_type (void) G_GNUC_CONST;
+#define VIPS_TYPE_OPERATION_MORPHOLOGY (vips_operation_morphology_get_type())
 /* enumerations from "../../../libvips/include/vips/object.h" */
 GType vips_argument_flags_get_type (void) G_GNUC_CONST;
 #define VIPS_TYPE_ARGUMENT_FLAGS (vips_argument_flags_get_type())
